After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742997 - [PATCH] Don't skip invalid enum values in schemas
[PATCH] Don't skip invalid enum values in schemas
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.43.x
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-01-15 22:43 UTC by maksqwe
Modified: 2017-10-11 09:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (2.67 KB, patch)
2015-01-15 22:43 UTC, maksqwe
committed Details | Review

Description maksqwe 2015-01-15 22:43:17 UTC
Created attachment 294619 [details] [review]
Patch

'?' has a lower priority than '||'
Patch include test schema.
Comment 1 Philip Withnall 2017-10-11 09:29:12 UTC
Review of attachment 294619 [details] [review]:

Good catch, and thanks for the new test case.